2013-01-29  Keishi Hattori  <keishi@webkit.org>

        [Chromium] Disabling WebFrameTest.DisambiguationPopup because it is failing.

        Unreviewed. Gardening.

        * tests/WebFrameTest.cpp:

2013-01-28  Xianzhu Wang  <wangxianzhu@chromium.org>

        Re-enable WebFrameTest.DivScrollIntoEditableTest
        https://bugs.webkit.org/show_bug.cgi?id=98558

        Reviewed by Adam Barth.

        * tests/WebFrameTest.cpp: Fixed several issues (onload script, the maximum scale factor, etc.) of WebFrameTest.DivScrollIntoEditableTest and enable it.
        * tests/data/get_scale_for_zoom_into_editable_test.html: Moved the logic of onload script (which seems not to work) into WebFrameTest.cpp.

2013-01-28  Tien-Ren Chen  <trchen@chromium.org>

        Fix disambiguation popup for new-style page scale
        https://bugs.webkit.org/show_bug.cgi?id=107391

        Reviewed by Adam Barth.

        This patch corrects various coordinate conversion for disambiguation
        popup for the new-style page scale mode.

        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::handleGestureEvent):
        (WebKit::WebViewImpl::handleInputEvent):
        * tests/WebFrameTest.cpp:
        * tests/data/disambiguation_popup_page_scale.html: Added.

2013-01-28  Sheriff Bot  <webkit.review.bot@gmail.com>

        Unreviewed, rolling out r141049.
        http://trac.webkit.org/changeset/141049
        https://bugs.webkit.org/show_bug.cgi?id=108151

        Caused some indexed tests to crash. (Requested by keishi on
        #webkit).

        * public/WebIDBCallbacks.h:
        (WebKit):
        * src/IDBCallbacksProxy.cpp:
        (WebKit::IDBCallbacksProxy::onUpgradeNeeded):
        * src/IDBCallbacksProxy.h:
        (IDBCallbacksProxy):
        * src/WebIDBCallbacksImpl.cpp:
        (WebKit::WebIDBCallbacksImpl::onSuccess):
        (WebKit::WebIDBCallbacksImpl::onUpgradeNeeded):
        * src/WebIDBCallbacksImpl.h:
        (WebIDBCallbacksImpl):